--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -2,3 +2,13 @@ body {
     background-color: #282828;
     color: #f0ffffff;
 }
+
+#focus {
+    display: none;
+    position: absolute;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    padding: 10px;
+    top: 50px;
+    left: 20px;
+}
